--- a/position.html
+++ b/position.html
@@ -514,7 +514,7 @@
                 <span class="nav-icon">⚡</span>
                 <span class="nav-label">Position</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="profile.html" class="nav-item">
                 <span class="nav-icon">⚙️</span>
                 <span class="nav-label">DEMOMAHA</span>
             </a>
